[workspace]
members = ["super-sabicom-macro"]

[package]
name = "super-sabicom"
version = "0.1.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"
description = "SNES emulator"
repository = "https://github.com/tanakh/super-sabicom"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators", "snes"]

[dependencies]
super-sabicom-macro = { path = "super-sabicom-macro", version = "0.1" }
meru-interface = "0.3.0"

bincode = "1.3.3"
educe = { version = "0.4.19", features = ["Default"], default-features = false }
encoding_rs = "0.8.31"
log = "0.4.17"
modular-bitfield = "0.11.2"
schemars = { version = "0.8.10", features = ["schemars_derive"] }
serde = "1.0.144"
thiserror = "1.0.33"

[dev-dependencies]
anyhow = "1.0.63"
argopt = "0.3.0"
compress-tools = "0.13"
dirs = "4.0.0"
env_logger = "0.9.0"
rayon = "1.5.3"
sdl2 = "0.35.2"
serde_json = "1.0.85"
